--- a/README
+++ b/README
@@ -7,6 +7,9 @@ To install this module type the following:
    make test
    make install
 
+Debian packages have been created by James Curbo - get them at
+http://teyandei.net/debian/.
+
 DEPENDENCIES
 
 This module requires these other modules and libraries:
@@ -30,4 +33,4 @@ under the same terms as Perl itself.
 Copyright (C) 2004 Gavin Brown.
 
 --
-$Id: README,v 1.3 2004/01/25 12:54:52 jodrell Exp $
+$Id: README,v 1.4 2004/03/09 13:25:07 jodrell Exp $
