--- a/README
+++ b/README
@@ -1,37 +1,6 @@
-INSTALLATION
+This module was renamed to Gtk2::Ex::PodViewer. The contents of this
+distribution are just a "stub" which will enable CPAN to automatically load
+the new module.
 
-To install this module type the following:
-
-   perl Makefile.PL
-   make
-   make test
-   make install
-
-Debian packages have been created by James Curbo - get them at
-http://teyandei.net/debian/.
-
-DEPENDENCIES
-
-This module requires these other modules and libraries:
-
-    Gtk2
-    IO::Scalar
-    Pod::Parser
-    File::Basename
-    Locale::gettext
-
-BUGS
-
-Something is wrong with the way Unicode characters are handled; it needs
-some attention. The next version will probably address this. Thanks to
-Marc Lehmann to spotting this.
-
-COPYRIGHT AND LICENCE
-
-This program is free software; you can redistribute it and/or modify it
-under the same terms as Perl itself.
-
-Copyright (C) 2004 Gavin Brown.
-
---
-$Id: README,v 1.5 2004/09/08 09:58:26 jodrell Exp $
+If you find a problem with this, please get in touch at gavin dot brown at uk
+dot com.
